--- a/microservice-auth/pom.xml
+++ b/microservice-auth/pom.xml
@@ -20,13 +20,12 @@
         <warContext>${app.name}</warContext>
         <package.file>${project.build.directory}/${project.artifactId}-${project.version}.zip</package.file>
         <packaging.type>usr</packaging.type>
+        <microserviceEndpointOne>http://localhost:9090/LibertyMicroServiceOne-1.0</microserviceEndpointOne>
+        <microserviceEndpointTwo>http://localhost:9091/LibertyMicroServiceTwo-1.0</microserviceEndpointTwo>
+        <microserviceEndpointBackup>http://localhost:9092/LibertyMicroServiceTwoFallback-1.0</microserviceEndpointBackup>
     </properties>
 
     <dependencies>
-   
-
-
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -76,16 +75,16 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.ibm.websphere.appserver.api</groupId>
-            <artifactId>com.ibm.websphere.appserver.api.basics</artifactId>
-            <version>1.2.16</version>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.basics</artifactId>
+            <version>1.2.16</version>
             <scope>provided</scope>
             <type>pom</type>
         </dependency>
         <dependency>
-            <groupId>com.ibm.websphere.appserver.api</groupId>
-            <artifactId>com.ibm.websphere.appserver.api.authData</artifactId>
-            <version>1.0.17</version>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.authData</artifactId>
+            <version>1.0.17</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
